# micro-kernel

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  .gn  BUILD.gn  README.md  makefile  micro-kernel.code-workspace
app/: app.c
mk/: BUILD.gn  kernel.ld  params.gni
mk/app/: BUILD.gn  app.c
mk/app/include/: app.h
mk/app/inetsrv/: inetsrv.h
mk/app/lkboot/: commands.c  dcc.c  inet.c  lkboot_protocol.h  pdcc.h
mk/app/loader/: loader.c
mk/app/mdebug/: rswd.c  rswdp.h
mk/app/moot/: fsboot.c  moot.c  stubs.c
mk/app/tests/: benchmarks.c  cache_tests.c  clock_tests.c  fibo.c  mem_tests.c  printf_tests.c  rules.mk  tests.c  thread_tests.c  v9fs_tests.c
mk/arch/arm64/: arch.c  fpu.c  mmu.c  mp.c  thread.c
mk/arch/include/arch/: atomic.h  ops.h
mk/arch/riscv/: mmu.cc  mp.c  rules.mk  spinlock.c  thread.c
mk/arch/test/: mmu.cc  rules.mk
mk/arch/x86/: BUILD.gn  arch.cc  asm.S  faults.c  faults.cc  fpu.c  mmu.cc  ops.S  rules.mk  start.S  thread.c  toolchain.mk
mk/arch/x86/cpuid/: BUILD.gn
mk/dev/: BUILD.gn
mk/dev/bus/pci/: BUILD.gn  debug.cc  pci.cc  rules.mk
mk/dev/class/: block_api.c  fb_api.c  netif_api.c  spi_api.c  uart_api.c
mk/dev/include/dev/: driver.h  ethernet.h  fbcon.h  flash_nor.h  gpio_i2c.h  gpio_keypad.h  i2c.h  keys.h  uart.h  udc.h  usb.h  usbc.h
mk/dev/include/hw/: mii.h  multiboot.h  pci.h  usb.h
mk/dev/net/e1000/: BUILD.gn  e1000.cc
mk/dev/net/pcnet/: pcnet.c
mk/dev/net/smc91c96/: smc91c96.c
mk/dev/timer/or1k_ticktimer/: or1k_ticktimer.c
mk/dev/uart/pl011/: BUILD.gn  uart.c
mk/dev/usb/: usb.c
mk/dev/virtio/: virtio_priv.h
mk/dev/virtio/9p/: protocol.h  virtio-9p.c
mk/include/: arch.h  asm.h  assert.h  debug.h  platform.h  trace.h
mk/include/arch/: atomic.h  mmu.h  mp.h  ops.h  thread.h
mk/include/kernel/: debug.h  event.h  init.h  mp.h  mutex.h  novm.h  port.h  semaphore.h  spinlock.h  thread.h  timer.h  vm.h  wait.h
mk/include/lk/: main.h
mk/include/platform/: debug.h  interrupts.h  time.h  timer.h
mk/kernel/: BUILD.gn  debug.cc  init.c  init.cc  mp.cc  port.cc  rules.mk  semaphore.c  semaphore.cc  thread.c  thread.cc  timer.cc
mk/kernel/include/kernel/: debug.h  event.h  mp.h  semaphore.h  spinlock.h  timer.h  vm.h  wait.h
mk/kernel/novm/: novm.c
mk/kernel/vm/: BUILD.gn  bootalloc.c  rules.mk  vm.c  vm_priv.h
mk/lib/acpi_lite/: BUILD.gn  acpi_lite.cc  rules.mk
mk/lib/arch/: BUILD.gn  rules.mk
mk/lib/arch/x86/: BUILD.gn
mk/lib/backtrace/: rules.mk
mk/lib/bio/: BUILD.gn  bio.c  debug.c  mem.c  subdev.c
mk/lib/bootargs/: bootargs.c
mk/lib/buildsig/: buildsig.c
mk/lib/cbuf/: BUILD.gn
mk/lib/cdcconsole/: cdcconsole.c
mk/lib/console/: BUILD.gn  console.cc  rules.mk
mk/lib/counters/: rules.mk
mk/lib/debugcommands/: debugcommands.c
mk/lib/debuglog/: rules.mk
mk/lib/fbl/: BUILD.gn
mk/lib/fbl_ulib/test/: type_info_tests.cc
mk/lib/fdtwalk/: rules.mk
mk/lib/fit/: BUILD.gn  rules.mk
mk/lib/fit/test/: function_tests.cc
mk/lib/font/: font.h
mk/lib/fs/: fs.c  shell.c
mk/lib/fs/9p/: v9fs.c
mk/lib/fs/ext2/: ext2.c  ext2_priv.h  ext3_fs.h  io.c
mk/lib/fs/fat/: dir.cc  fat_priv.h  file.h  file_iterator.cc  fs.cc  rules.mk
mk/lib/fs/spifs/: spifs.c
mk/lib/fs/test/: test.c
mk/lib/fxt/: BUILD.gn  rules.mk
mk/lib/gfx/: gfx.c
mk/lib/heap/: BUILD.gn  heap_wrapper.c
mk/lib/heap/cmpctmalloc/: BUILD.gn  cmpctmalloc.c
mk/lib/heap/miniheap/: miniheap.c
mk/lib/init/: BUILD.gn
mk/lib/io/: BUILD.gn  console.c
mk/lib/iovec/: BUILD.gn  iovec.c
mk/lib/kconcurrent/: rules.mk
mk/lib/klog/: klog.c
mk/lib/ktl/: BUILD.gn  rules.mk
mk/lib/ktrace/: BUILD.gn  ktrace.cc  rules.mk
mk/lib/lazy_init/: rules.mk
mk/lib/libc/: BUILD.gn  abort.c  atof.c  bsearch.c  eabi.c  printf.c  qsort.c  rules.mk
mk/lib/libc/include/: assert.h  ctype.h  endian.h  errno.h  iovec.h  malloc.h  printf.h  stdint.h  stdlib.h
mk/lib/libc/string/: BUILD.gn  bcopy.c  bzero.c  memcmp.c  memmove.c  memset.c  strchr.c  strdup.c  strlcpy.c  strlen.c  strncmp.c  strnlen.c  strpbrk.c  strspn.c  strstr.c  strtok.c
mk/lib/libc/test/: rules.mk
mk/lib/lockdep/: rules.mk
mk/lib/minip/: BUILD.gn  arp.c  chksum.c  dhcp.cc  lk_console.c  pktbuf.c  rules.mk  tcp.c
mk/lib/norfs/: norfs.c
mk/lib/norfs/test/: norfs_test.c
mk/lib/partition/: partition.c
mk/lib/pool/: BUILD.gn
mk/lib/pool/test/: pool_test.cc
mk/lib/power-management/: rules.mk
mk/lib/pretty/: BUILD.gn  rules.mk
mk/lib/pretty/test/: test.c
mk/lib/special-sections/: BUILD.gn  rules.mk  special-sections.cc
mk/lib/stall/: rules.mk
mk/lib/stdcompat/: BUILD.gn  rules.mk  stdcompat.cc
mk/lib/stdcompat/test/: traits_test.cc
mk/lib/text/: text.c
mk/lib/tftp/: tftp.c
mk/lib/tga/: tga.c
mk/lib/uefi/: configuration_table.h  defer.h  switch_stack.h  text_protocol.cc  uefi.cc
mk/lib/unittest/: rules.mk  unittest.c
mk/lib/unittest/app/: app.c
mk/lib/version/: version.c
mk/lib/wake-vector/: rules.mk
mk/lib/watchdog/: watchdog.c
mk/platform/: BUILD.gn  debug.c  power.c
mk/platform/include/: platform.h
mk/platform/include/platform/: debug.h  interrupts.h  timer.h
mk/platform/pc/: BUILD.gn  cmos.cc  console.c  console.cc  debug.c  keyboard.cc  pic.cc  platform.c  platform.cc  rules.mk  timer.cc  uart.c  uart.cc
mk/platform/qemu-virt-arm/: platform.c
mk/platform/qemu-virt-riscv/: platform.c  platform_p.h
mk/platform/sifive/: gpio.c  platform_p.h  uart.c
mk/project/virtual/: test.mk
mk/top/: BUILD.gn  debug.cc  init.c  main.cc  rules.mk
mk/top/include/lk/: asm.h  bits.h  debug.h  err.h  init.h  list.h  main.h  pow2.h  reg.h  trace.h  utils.h
mk/top/include/zircon/: assert.h  limits.h  listnode.h  types.h
mk/ulib/affine/: rules.mk
mk/ulib/concurrent/: rules.mk
mk/ulib/fbl/: BUILD.gn  string_buffer.cc
mk/ulib/fbl/test/: confine_array_index_tests.cc  (+1 more)
mk/ulib/ffl/: rules.mk
mk/ulib/hwreg/: BUILD.gn  hwreg_asm_header.gni  rules.mk
mk/ulib/lockdep/: rules.mk
mk/ulib/mmio-ptr/: BUILD.gn  rules.mk
mk/ulib/zircon-internal/: BUILD.gn
mk/ulib/zx/: rules.mk
(+435 files in other folders)
