# Copyright 2025 Mist Tecnologia Ltda. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/kernel/migrated_targets.gni")

zx_library("dev") {
  sources = [
    "class/block_api.c",
    "class/fb_api.c",
    "class/i2c_api.c",
    "class/netif_api.c",
    "class/spi_api.c",
    "class/uart_api.c",
    "dev.c",
    "driver.c",
  ]
}
