# Copyright 2025 Mist Tecnologia Ltda
# Copyright 2019 The Fuchsia Authors
#
# Use of this source code is governed by a MIT-style
# license that can be found in the LICENSE file or at
# https://opensource.org/licenses/MIT

source_set("kernel") {
  sources = [
    "debug.cc",
    "event.cc",
    "init.cc",
    "mp.cc",
    "mutex.cc",
    "port.cc",
    "semaphore.cc",
    "thread.cc",
    "timer.cc",
  ]

  deps = [
    "//mk/kernel/vm",
    "//mk/lib/console",
    "//mk/lib/fbl",
    "//mk/lib/fit",
    "//mk/lib/heap",
    "//mk/lib/ktl",
    "//mk/lib/libc",
    "//mk/lib/pretty",
    "//mk/target",
  ]

  # TODO(https://fxbug.dev/42101573): This dependency is conditional because when built
  # with GCC the kernel uses function scoped statics requiring dynamic
  # initialization. Once https://fxbug.dev/42101573 is fixed, this dependency can be made
  # unconditional.
  if (!is_gcc) {
    deps += [ "//mk/lib/cxxabi-dynamic-init" ]
  }
}
