# Copyright 2019 The Fuchsia Authors
#
# Use of this source code is governed by a MIT-style
# license that can be found in the LICENSE file or at
# https://opensource.org/licenses/MIT

import("//build/kernel/kernel_cpu.gni")
import("//build/kernel/zx_library.gni")

zx_library("platform") {
  sources = [
    "debug.c",
    "init.c",
    "power.c",
  ]
  deps = [ "//mk/lib/console" ]

  public_deps = []
}
