# Copyright 2019 The Fuchsia Authors
#
# Use of this source code is governed by a MIT-style
# license that can be found in the LICENSE file or at
# https://opensource.org/licenses/MIT

import("//build/kernel/kernel_cpu.gni")

source_set("top") {
  sources = [
    "debug.cc",
    "init.cc",
    "main.cc",
  ]
  deps = [
    "//mk/app",
    "//mk/arch/$kernel_cpu",
    "//mk/dev",
    "//mk/kernel",
    "//mk/lib/console",
    "//mk/lib/fbl",
    "//mk/lib/init",
    "//mk/platform",
    "//mk/target",
  ]

  # TODO(https://fxbug.dev/374753100): Remove this after soft transition.
  defines = [ "_LIBCPP_VERBOSE_ABORT_NOT_NOEXCEPT" ]
}

# If not building for mk (e.g., linux, macos) then binaries need to get
# mk/zircon headers directly from source.
config("public_config") {
  include_dirs = [ "include" ]
  visibility = [ ":*" ]
}

# These headers are exported for use in building non-mk-host binaries.
source_set("public") {
  #public = [ "zircon/mistos/syscalls/object.h" ]

  # Since this doesn't actually compile any code, don't let it contribute any
  # implicit link inputs from default configs.
  configs = []

  public_configs = [ ":public_config" ]
}
