# Copyright 2025 Mist Tecnologia Ltda
# Copyright 2019 The Fuchsia Authors
#
# Use of this source code is governed by a MIT-style
# license that can be found in the LICENSE file or at
# https://opensource.org/licenses/MIT

import("//build/kernel/migrated_targets.gni")

zx_library("fbl") {
  sources = [
    #"arena.cc"
  ]
  deps = [
    #":tests",
    "//mk/kernel/vm:headers",
    "//mk/lib/fit",
    "//mk/lib/ktl",
    "//mk/ulib/fbl",
  ]
  public_deps = [
    # <fbl/gparena.h> has #include <lib/fit/defer.h>
    "//mk/lib/fit:headers",
    "//mk/ulib/fbl:headers",

    # <include/fbl/arena.h> has #include <ktl/forward.h>.
    "//mk/lib/ktl:headers",
  ]
}

source_set("tests") {
  #TODO: testonly = true
  visibility = [ ":*" ]
  sources = [
    "arena_tests.cc",
    "gparena_tests.cc",
    "name_tests.cc",
    "object_tracker_tests.cc",
  ]

  deps = [
    ":headers",
    "//zircon/kernel/lib/unittest",
  ]
}
