# Copyright 2025 Mist Tecnologia Ltda. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/kernel/migrated_targets.gni")

zx_library("minip") {
  sources = [
    "arp.c",
    "chksum.c",
    "dhcp.cc",
    "lk_console.c",
    "minip.c",
    "net_timer.c",
    "pktbuf.c",
    "tcp.c",
    "udp.c",
  ]

  deps = [
    "//mk/lib/cbuf",
    "//mk/lib/console",
    "//mk/lib/iovec",
    "//mk/lib/pool",
    "//mk/lib/pretty",
  ]
}
