# Copyright 2019 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/kernel/zx_library.gni")
import("//build/toolchain/toolchain_environment.gni")

zx_library("pretty") {
  sdk = "static"
  sdk_headers = [
    "pretty/hexdump.h",
    "pretty/sizes.h",
  ]

  sources = [
    "hexdump.cc",
    "sizes.cc",
  ]
  public_deps = [ "//mk/lib/zircon-internal:headers" ]
  if (is_kernel && toolchain_environment != "kernel") {
    deps = [ "//mk/lib/libc" ]
  }
}

group("tests") {
  testonly = true
  deps = [ "test:tests" ]
}
