# Copyright 2019 The Fuchsia Authors
#
# Use of this source code is governed by a MIT-style
# license that can be found in the LICENSE file or at
# https://opensource.org/licenses/MIT

import("//build/kernel/zx_library.gni")
import("//build/toolchain/toolchain_environment.gni")

zx_library("pc") {
  sources = [
    "cmos.c",
    "console.c",
    "debug.c",
    "ide.c",
    "interrupts.c",
    "keyboard.c",
    "lapic.c",
    "pic.c",
    "platform.c",
    "timer.c",
    "uart.c",
  ]

  deps = [
    "//mk/dev",
    "//mk/dev/bus/pci/drivers",
    "//mk/lib/acpi_lite",
    "//mk/lib/bio",
    "//mk/lib/cbuf",
    "//mk/platform:headers",
  ]
  public_deps = [
    # <ktl/optional.h> in uart.h.
    "//mk/lib/ktl:headers",
  ]

  if (toolchain_environment == "kernel") {
    public_deps += []
  }
}
