# Copyright 2019 The Fuchsia Authors
#
# Use of this source code is governed by a MIT-style
# license that can be found in the LICENSE file or at
# https://opensource.org/licenses/MIT

import("//build/kernel/zx_library.gni")
import("//build/toolchain/toolchain_environment.gni")

zx_library("pc") {
  sources = [
    "cmos.cc",
    "console.cc",
    "debug.cc",
    "ide.c",
    "interrupts.cc",
    "keyboard.cc",
    "lapic.cc",
    "pic.cc",
    "platform.cc",
    "timer.cc",
    "uart.cc",
  ]

  deps = [
    "//mk/dev",
    "//mk/dev/bus/pci/drivers",
    "//mk/lib/acpi_lite",
    "//mk/lib/bio",
    "//mk/lib/cbuf",
    "//mk/platform:headers",
  ]
  public_deps = [
    # <ktl/optional.h> in uart.h.
    "//mk/lib/ktl:headers",

    "//mk/lib/fbl",
  ]

  if (toolchain_environment == "kernel") {
    public_deps += []
  }
}
