# Copyright 2019 The Fuchsia Authors
#
# Use of this source code is governed by a MIT-style
# license that can be found in the LICENSE file or at
# https://opensource.org/licenses/MIT

import("//build/kernel/migrated_targets.gni")

zx_library("pci") {
  sources = [
    "backend/bios32.cc",
    "backend/ecam.cc",
    "backend/type1.cc",
    "bus_mgr/bridge.cc",
    "bus_mgr/bus.cc",
    "bus_mgr/bus_mgr.cc",
    "bus_mgr/device.cc",
    "bus_mgr/resource.cc",
    "debug.cc",
    "pci.cc",
  ]

  deps = [
    "//mk/app",
    "//mk/dev",
    "//mk/lib/console",
    "//mk/lib/pretty",
  ]

  public_deps = []

  cflags_cc = [ "-Wno-invalid-offsetof" ]
  cflags_c = [ "-Wmissing-declarations" ]
}
