# Copyright 2025 Mist Tecnologia Ltda. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

source_set("e1000") {
  sources = [ "e1000.cc" ]
  deps = [
    "//mk/dev",
    "//mk/dev/bus/pci",
    "//mk/lib/fbl",
    "//mk/lib/init",
    "//mk/lib/minip",
  ]
}
