# Copyright 2025 Mist Tecnologia Ltda
# Copyright 2019 The Fuchsia Authors
#
# Use of this source code is governed by a MIT-style
# license that can be found in the LICENSE file or at
# https://opensource.org/licenses/MIT

import("//build/kernel/kernel_cpu.gni")

source_set("string") {
  sources = [
    "bcopy.c",
    "bzero.c",
    "memchr.c",
    "memcmp.c",
    "memcpy.c",
    "memmove.c",
    "memset.c",
    "strcasecmp.c",
    "strcat.c",
    "strchr.c",
    "strcmp.c",
    "strcoll.c",
    "strcpy.c",
    "strdup.c",
    "strerror.c",
    "strlcat.c",
    "strlcpy.c",
    "strlen.c",
    "strncat.c",
    "strncmp.c",
    "strncpy.c",
    "strnicmp.c",
    "strnlen.c",
    "strpbrk.c",
    "strrchr.c",
    "strspn.c",
    "strstr.c",
    "strtok.c",
    "strxfrm.c",
  ]
  if (is_kernel) {
    deps = [
      #"arch/$kernel_cpu",
      "//mk/lib/libc:ctype",
      "//mk/lib/libc:headers",
    ]
  }
}
