# Copyright 2025 Mist Tecnologia Ltda
# Copyright 2019 The Fuchsia Authors
#
# Use of this source code is governed by a MIT-style
# license that can be found in the LICENSE file or at
# https://opensource.org/licenses/MIT

source_set("x86") {
  sources = [
    "memcpy.S",
    "memset.S",
  ]
  deps = [ "//mk/lib/libc:headers" ]
}
